cleanup and upgrade spring mcp-authorization-server demo